Fix bug: awkward horizontal scroll

--- a/konbini-life/src/assets/sass/layout/_main.sass
+++ b/konbini-life/src/assets/sass/layout/_main.sass
@@ -29,6 +29,7 @@ main
             top: 245px
             padding-top: space.$desktop-space-lv-1
             padding-bottom: space.$desktop-space-lv-1
+            background-color:#000
             background-color: rgba(0, 0, 0, 0.6)
         .subheading-containter
             text-align: center
@@ -48,6 +49,7 @@ main
 
 // SECTION: "CHARACTERS"
 .container-characters
+    overflow-x: hidden
     padding-bottom: space.$desktop-space-lv-4
     h2.subheading
         font-size: calc(1rem * #{$desktop-body-text-scale-ratio} * #{$desktop-body-text-scale-ratio})
